x86/tdx: Make pages shared in ioremap()
In TDX guests, guest memory is protected from the host access. If a
guest performs I/O, it needs to explicitly share the I/O memory with
the host. Hence all ioremap()ed pages that are not backed by normal
memory (IORES_DESC_NONE or IORES_DESC_RESERVED) have to be mapped as
shared.

Since TDX memory encryption support is similar to AMD SEV architecture,
reuse the infrastructure from AMD SEV code. Introduce CC_ATTR_GUEST_TDX
to add TDX-specific changes to the AMD SEV/SME memory encryption code.

Add tdx_shared_mask() interface to get the TDX guest shared bit mask.

Signed-off-by: Kirill A. Shutemov <kirill.shutemov@linux.intel.com>
Reviewed-by: Andi Kleen <ak@linux.intel.com>
Reviewed-by: Tony Luck <tony.luck@intel.com>
Signed-off-by: Kuppuswamy Sathyanarayanan <sathyanarayanan.kuppuswamy@linux.intel.com>

--- a/arch/x86/Kconfig
+++ b/arch/x86/Kconfig
@@ -880,7 +880,7 @@ config INTEL_TDX_GUEST
 	select PARAVIRT_XXL
 	select ARCH_HAS_CC_PLATFORM
 	select X86_MCE
-	select DYNAMIC_PHYSICAL_MASK
+	select X86_MEM_ENCRYPT
 	help
 	  Support running as a guest under TDX.  Without this support,
 	  the kernel can not boot or run under TDX.
