x86/tdx: Extend the cc_platform_has() API to support TDX guests
cc_platform_has() API is used to conditionally enable Confidential
Computing (CC) features in the kernel. Few generic CC features
supported in the kernel are, string I/O unroll support,
encryption/decryption of pages, etc. Since TDX guest also need to use
these CC features, extend cc_platform_has() API and add TDX
guest-specific CC attributes support.

Use is_tdx_guest() API to detect for the TDX guest status and return
TDX-specific CC attributes. To enable use of CC APIs in the TDX guest,
select ARCH_HAS_CC_PLATFORM in CONFIG_INTEL_TDX_GUEST case.

This is a preparatory patch and just creates the framework for adding
TDX guest specific CC attributes.

Since is_tdx_guest() function (through cc_platform_has() API) is used in
the early boot code, disable the instrumentation flags and function
tracer. This is similar to AMD SEV and cc_platform.c.

Removed #ifdef in intel_cc_platform_has() because it will get triggered
only when is_tdx_guest() is true and there is a stub for is_tdx_guest()
in !CONFIG_INTEL_TDX_GUEST case.

Signed-off-by: Kuppuswamy Sathyanarayanan <sathyanarayanan.kuppuswamy@linux.intel.com>

--- a/arch/x86/Kconfig
+++ b/arch/x86/Kconfig
@@ -878,6 +878,7 @@ config INTEL_TDX_GUEST
 	depends on X86_64 && CPU_SUP_INTEL
 	depends on X86_X2APIC
 	select PARAVIRT_XXL
+	select ARCH_HAS_CC_PLATFORM
 	help
 	  Support running as a guest under TDX.  Without this support,
 	  the kernel can not boot or run under TDX.
